--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.MainActivity"
+            android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,21 +17,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.HitungPersegiPanjangActivity" />
-        <activity android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.HitungBalokActivity" />
-        <activity android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.HitungLingkaranActivity" />
-        <activity android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.HitungBolaActivity" />
+        <activity android:name=".HitungPersegiPanjangActivity" />
+        <activity android:name=".HitungBalokActivity" />
+        <activity android:name=".HitungLingkaranActivity" />
+        <activity android:name=".HitungBolaActivity" />
         <activity
-            android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.AboutActivity"
+            android:name=".AboutActivity"
             android:theme="@style/AppTheme.FullScreen" />
-        <activity android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.HitungTabungActivity" />
-        <activity android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.HitungKerucutActivity" />
+        <activity android:name=".HitungTabungActivity" />
+        <activity android:name=".HitungKerucutActivity" />
         <activity
-            android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.PilihBangunRuangActivity"
+            android:name=".PilihBangunRuangActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.PilihBangunDatarActivity"
+            android:name=".PilihBangunDatarActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".HitungPersegiActivity" />
+        <activity android:name=".HitungSegitigaActivity"></activity>
     </application>
 
 </manifest>
