adding JajarGenjang and LimasSegiEmpat Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,27 +18,60 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HitungPersegiPanjangActivity" />
-        <activity android:name=".HitungBalokActivity" />
-        <activity android:name=".HitungLingkaranActivity" />
-        <activity android:name=".HitungBolaActivity" />
+        <activity
+            android:name=".HitungPersegiPanjangActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungBalokActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungLingkaranActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungBolaActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AboutActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.FullScreen" />
-        <activity android:name=".HitungTabungActivity" />
-        <activity android:name=".HitungKerucutActivity" />
+        <activity
+            android:name=".HitungTabungActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungKerucutActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PilihBangunRuangActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".PilihBangunDatarActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".HitungPersegiActivity" />
-        <activity android:name=".HitungSegitigaActivity" />
-        <activity android:name=".HitungTrapesiumActivity" />
-        <activity android:name=".HitungLayangLayangActivity" />
-        <activity android:name=".HitungBelahKetupatActivity" />
-        <activity android:name=".HitungKubusActivity"></activity>
+        <activity
+            android:name=".HitungPersegiActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungSegitigaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungTrapesiumActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungLayangLayangActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungBelahKetupatActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungKubusActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungJajarGenjangActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HitungLimasSegiEmpatActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
